@@ -1,3 +1,8 @@
+2007-09-03  Andy Wingo  <wingo@pobox.com>
+
+	* flumotion/common/Makefile.am (flumotion_PYTHON): 
+	* flumotion/common/manhole.py: Add manhole module. MUAHAHA
+
 2007-08-29  Andy Wingo  <wingo@pobox.com>
 
 	* flumotion/test/test_component_feed.py (FeedTestCase.tearDown):
